--- a/pages/css/etapas.css
+++ b/pages/css/etapas.css
@@ -10,3 +10,8 @@
 .badge.bg-secondary {
     background-color: #6c757d;
 }
+
+.etapa-concluida {
+    background-color: #6c757d !important; /* Cor cinza escuro */
+    color: white; /* Altere a cor do texto se necessário */
+}
